# langchain-report-generator

./: .env.example  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/v1/: healthcheck.py
app/core/: config.py
app/core/logger/: custom_logging.py  logging_config.json  logging_config_local.json
experiments/: storm.ipynb
experiments/langchain-academy-main/module-0/: basics.ipynb
experiments/langchain-academy-main/module-1/: 2-chain.ipynb  3-router.ipynb  4-agent.ipynb  5-agent-memory.ipynb  6-deployment.ipynb
experiments/langchain-academy-main/module-2/: 1-state-schema.ipynb  2-state-reducers.ipynb  3-multiple-schemas.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization.ipynb  6-chatbot-external-memory.ipynb
experiments/langchain-academy-main/module-2/state_db/: example.db-shm  example.db-wal
experiments/langchain-academy-main/module-3/: 1-streaming-interruption.ipynb  2-breakpoints.ipynb  3-edit-state-human-feedback.ipynb  4-dynamic-breakpoints.ipynb  5-time-travel.ipynb
experiments/langchain-academy-main/module-4/: 1-parallelization.ipynb  2-sub-graph.ipynb  3-map-reduce.ipynb  4-research-assistant.ipynb
