[tool.poetry]
name = "langchain-report-generator"
version = "0.1.0"
description = ""
authors = ["Yoshinori Kaichi <kai.yoshi.v2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
langchain = "^0.2.14"
langgraph = "^0.2.4"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
wikipedia = "^1.4.0"
scikit-learn = "^1.5.1"
langchain-fireworks = "^0.1.7"
tavily-python = "^0.4.0"
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
